--- a/server/package.json
+++ b/server/package.json
@@ -23,6 +23,7 @@
     "mongoose": "^9.0.2",
     "multer": "^2.0.2",
     "socket.io": "^4.8.3",
+    "uuid": "^13.0.0",
     "validator": "^13.15.26"
   }
 }
